<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <TextView
        android:text="@string/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <android.support.design.widget.TextInputLayout
        style="@style/commonLayoutStyle">
        <EditText
            android:id="@+id/et_register_fullname"
            android:hint="@string/et_register_fullname"
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <RadioGroup
        android:id="@+id/rg_register_public_id"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/tv_register_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rb_ktp"
            android:text="@string/rb_ktp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rb_sim"
            android:text="@string/rb_SIM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rb_student_card"
            android:text="@string/rb_student_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <android.support.design.widget.TextInputLayout
        style="@style/commonLayoutStyle">
        <EditText
            android:id="@+id/et_register_public_id"
            android:hint="@string/et_register_public_id"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        style="@style/commonLayoutStyle">
        <EditText
            android:id="@+id/et_register_email"
            android:hint="@string/et_register_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        style="@style/commonLayoutStyle">
        <EditText
            android:id="@+id/et_register_password"
            android:hint="@string/et_register_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        style="@style/commonLayoutStyle">
        <EditText
            android:id="@+id/et_register_birthplace"
            android:hint="@string/et_register_birthplace"
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        style="@style/commonLayoutStyle">
        <EditText
            android:id="@+id/et_register_birthday"
            android:hint="@string/et_register_birthday"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        style="@style/commonLayoutStyle">
        <EditText
            android:id="@+id/et_register_address"
            android:hint="@string/et_register_address"
            android:inputType="textCapWords|textLongMessage|textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_register"
        android:text="@string/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_already_registered"
        android:text="@string/tv_already_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>